@@ -1640,3 +1640,7 @@
 2013-09-21  Daniel Juyung Seo (SeoZ)
 
         * hover: added "dismissed" callback.
+
+2013-09-21  Daniel Juyung Seo (SeoZ)
+
+        * menu: added "dismissed" callback.
